src/components/Sidebar/sidebar.scss
.navbar {
  background: #331600;
  width: 9%;
  height: 100%;
  position: absolute;
  padding: 1em;
  a {
    font-size: 2.5em;
    color: #ffff66;
    vertical-align: middle;
    display: inline-block;
    height: 2em;
    // position: relative;
    text-decoration: none;

    i {
      transition: all 0.3s ease-out;
    }

    &:hover {
      color: #ffff66;

      svg {
        opacity: 0;
      }

      &:after {
        opacity: 1;
      }
    }

    &:after {
      content: "";
      font-size: 1rem;
      letter-spacing: 0.2em;
      position: absolute;
      // display: block;
      width: 100%;
      text-align: center;
      opacity: 0;
      transition: all 0.3s ease-out;
    }

    &:first-child {
      &::after {
        content: "HOME";
      }
    }
  }

  a.resume-link {
    &:after {
      content: "RESUME";
    }
  }

  a.about-link {
    &:after {
      content: "ABOUT";
    }
  }

  a.contact-link {
    &:after {
      content: "CONTACT";
    }
  }

  a.linkedin-link {
    &:after {
      content: "LINKEDIN";
    }
  }

  a.github-link {
    &:after {
      content: "GITHUB";
    }
  }

  a.active {
    svg {
      color: #7df9ff;
    }
  }
}

.t-logo {
  font-family: "Archivo Black", sans-serif;
  color: #ff66ff;
  text-shadow: -5px 0px 0px #ffff66;
  font-size: 6rem;
  text-align: center;
  margin-top: 0.1em;
  line-height: 0.8em;
}

.tedecast {
  font-family: "Montserrat", sans-serif;
  color: #ffff66;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 500;
  text-align: center;
  margin-bottom: 1em;
}
.navbar-links {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}
// Mobile changes
@media (max-width: 825px) {
  .navbar {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 6em;
    align-items: center;
    position: fixed;
    bottom: 0;
    left: 0;
    justify-content: space-evenly;
    a {
      font-size: 2em;
    }
  }

  .navbar-links {
    flex-direction: row;
  }

  .navbar-links a:not(:last-child) {
    margin-right: 1em; /* Used for space between icons in media */
  }

  .t-logo {
    display: none;
  }

  .tedecast {
    display: none;
  }
}

